# gdtf_parser

./: .gitignore  Cargo.toml  LICENSE.md  README.md  checklist
src/: errors.rs  lib.rs
src/deparse/: mod.rs
src/errors/: mod.rs
src/feature_group/: mod.rs
src/feature_group/feature/: mod.rs
src/fixture_type/: mod.rs
src/fixture_type/attribute_definitions/: mod.rs
src/gdtf/: mod.rs
src/gdtf_v_1/: mod.rs
src/gdtf_v_1_0/: mod.rs
src/gdtf_v_1_1/: mod.rs
src/units/: color.rs  data_version.rs  guid.rs  mod.rs  name.rs  physical_unit.rs
src/utils/: mod.rs
test/: ACME@ACME_AE-610_BEAM@ACME_AE-610_BEAM.gdtf  ADB@Klemantis_AS_1000@Revision_1.gdtf  ADJ@Mega_TriPar_Profile_Plus@28122021.gdtf  ADSI_DATATON@WO_ADSI@V0.1.gdtf  China@36x10_Wash_LED_Moving_Light@2022-02-23-3.gdtf  JB-Lighting@P12_Spot_HP@V_1.15.gdtf  Robe_Lighting@Robin_Viva_CMY@13042021.gdtf  SGM_Light@G-7_Spot@Rev_A.gdtf  SGM_Light@P-6@Rev_B.gdtf  Shenzhen@Mini_Led_Spot_60W@REV1.0TEST.gdtf  StairVille@Stairville_Fan-200_DMX@Init_-_Rev1.gdtf  emitter_test.xml
test/ADB@Klemantis_AS_1000@Revision_1/: description.xml
test/ADJ@Mega_TriPar_Profile_Plus@28122021/: description.xml
test/ADSI_DATATON@WO_ADSI@V0.1/: description.xml
test/China@36x10_Wash_LED_Moving_Light@2022-02-23-3/: description.xml
test/JB-Lighting@P12_Spot_HP@V_1.15/: description.xml
test/Robe_Lighting@Robin_Viva_CMY@13042021/: description.xml
test/SGM_Light@P-6@Rev_B/: description.xml
test/Shenzhen@Mini_Led_Spot_60W@REV1.0TEST/: description.xml
test/StairVille@Stairville_Fan-200_DMX@Init_-_Rev1/: description.xml
(+204 files in other folders)
