[package]
name = "gdtf-parser"
version = "0.1.0"
authors = ["michaelhugi <michael.hugi@koeenix-band.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22"
zip = "0.5"
dmx-struct = "0.1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
unicode-segmentation = "1.7.1"

[dev-dependencies]
backtrace = "0.3.59"